test/sema/null-check-analysis/null-check-extra-unwrap-in-member-access.delta
// RUN: %check_errors %not %delta -typecheck %s

struct S: Copyable {
    S*? a;
}

void foo(S* p) {
    if (p.a != null) {
        // CHECK: [[@LINE+1]]:12: error: cannot unwrap non-optional type 'S*'
        p.a!.a = p;
    }
}
